code cleanup, renaming elements and removing unnecessary ones

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">Themes&amp;Styles</string>
-    <string name="welcome">Welcome</string>
+    <string name="app_name">ChatApp</string>
 </resources>
